{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 24,
  "lineage": "e160ebbc-306f-94da-b9fd-fd9715b2bcf9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e807c18c3331290",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0ccf57896b6493e65",
            "domain": "vpc",
            "id": "eipalloc-03e807c18c3331290",
            "instance": "i-067d02f225bd74b35",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e4443f4d850848ed",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-44-196-138-146.compute-1.amazonaws.com",
            "public_ip": "44.196.138.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw_ws",
            "aws_network_interface.nic_ws",
            "aws_security_group.allow_web",
            "aws_subnet.subnet_ws",
            "aws_vpc.vpc_ws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:624301448388:instance/i-067d02f225bd74b35",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067d02f225bd74b35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_testing_ravi",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0e4443f4d850848ed"
              }
            ],
            "primary_network_interface_id": "eni-0e4443f4d850848ed",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "44.196.138.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6be96a8f36cec19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02366fe4bcb506df3",
            "tags": {
              "Name": "ravi_ec2_terraform_testing"
            },
            "tags_all": {
              "Name": "ravi_ec2_terraform_testing"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df5952790c82c0af"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_ws",
            "aws_security_group.allow_web",
            "aws_subnet.subnet_ws",
            "aws_vpc.vpc_ws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624301448388:internet-gateway/igw-03bf55f27c270ca79",
            "id": "igw-03bf55f27c270ca79",
            "owner_id": "624301448388",
            "tags": {
              "Name": "ravi_gw_test"
            },
            "tags_all": {
              "Name": "ravi_gw_test"
            },
            "vpc_id": "vpc-0cf05f0142a84dd77"
          },
          "dependencies": [
            "aws_vpc.vpc_ws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624301448388:network-interface/eni-0e4443f4d850848ed",
            "attachment": [
              {
                "attachment_id": "eni-attach-04409d425b06ad0fb",
                "device_index": 0,
                "instance": "i-067d02f225bd74b35"
              }
            ],
            "id": "eni-0e4443f4d850848ed",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:bd:a0:9d:18:dd",
            "owner_id": "624301448388",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0df5952790c82c0af"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02366fe4bcb506df3"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet_ws",
            "aws_vpc.vpc_ws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624301448388:route-table/rtb-0252c41e81834d4e1",
            "id": "rtb-0252c41e81834d4e1",
            "owner_id": "624301448388",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bf55f27c270ca79",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bf55f27c270ca79",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ravi_route_table_testing"
            },
            "tags_all": {
              "Name": "ravi_route_table_testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf05f0142a84dd77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw_ws",
            "aws_vpc.vpc_ws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0cda1faa30b6a2a",
            "route_table_id": "rtb-0252c41e81834d4e1",
            "subnet_id": "subnet-02366fe4bcb506df3"
          },
          "dependencies": [
            "aws_internet_gateway.gw_ws",
            "aws_route_table.route_table_ws",
            "aws_subnet.subnet_ws",
            "aws_vpc.vpc_ws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624301448388:security-group/sg-0df5952790c82c0af",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df5952790c82c0af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "624301448388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf05f0142a84dd77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_ws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624301448388:subnet/subnet-02366fe4bcb506df3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02366fe4bcb506df3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "624301448388",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ravi_subnet_testing"
            },
            "tags_all": {
              "Name": "ravi_subnet_testing"
            },
            "vpc_id": "vpc-0cf05f0142a84dd77"
          },
          "dependencies": [
            "aws_vpc.vpc_ws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624301448388:vpc/vpc-0cf05f0142a84dd77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a319cc4dfa7e758",
            "default_route_table_id": "rtb-095eb1f6b97eb6c8b",
            "default_security_group_id": "sg-062cb5e3066892502",
            "dhcp_options_id": "dopt-6cad8b16",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cf05f0142a84dd77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095eb1f6b97eb6c8b",
            "owner_id": "624301448388",
            "tags": {
              "Name": "ravi_vpc_test"
            },
            "tags_all": {
              "Name": "ravi_vpc_test"
            }
          }
        }
      ]
    }
  ]
}